argocd/applications/blue-green/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orange-app
  namespace: sample-apps
  labels:
    app: orange-app
spec:
  selector:
    matchLabels:
      app: orange-app
  replicas: 2
  template:
    metadata:
      labels:
        app: orange-app
    spec:
      containers:
      - name: orange-container
        image: public.ecr.aws/e1x6y8e1/orange:latest
        ports:
            - containerPort: 80
        resources:
          limits:
            memory: "100Mi"
            cpu: "200m"

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: purple-app
  namespace: sample-apps
  labels:
    app: purple-app
spec:
  selector:
    matchLabels:
      app: purple-app
  replicas: 2
  template:
    metadata:
      labels:
        app: purple-app
    spec:
      containers:
      - name: purple-container
        image: public.ecr.aws/e1x6y8e1/purple:latest
        ports:
            - containerPort: 80
        resources:
          limits:
            memory: "100Mi"
            cpu: "200m"
