argocd/applications/blue-green/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: sample-apps
  name: green-service
  labels:
    app: green-app
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: /green/index.html
spec:
  type: NodePort
  selector:
    app: green-app
  ports:
    - port: 80
      targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  namespace: sample-apps
  name: blue-service
  labels:
    app: blue-app
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: /blue/index.html
spec:
  type: NodePort
  selector:
    app: blue-app
  ports:
    - port: 80
      targetPort: 80
